--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ a {
 
 body {
   text-align: center;
-  background-image: url(images/left.png);
+  background-image: url();
   background-repeat: no-repeat;
   background-color: #FA58F4;
   color: #DA4930;
