--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ a {
 
 body {
   text-align: center;
-  background-image: url();
+  background-image: url(bbw.imageg.net/cms_widgets/19/40/1940345_assets/slide4_image.jpg);
   background-repeat: no-repeat;
   background-color: #FA58F4;
   color: #DA4930;
