--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ a {
 
 body {
   text-align: center;
-  background-image: url(bbw.imageg.net/cms_widgets/19/40/1940345_assets/slide4_image.jpg);
+  background-image: url(http://bbw.imageg.net/cms_widgets/19/40/1940345_assets/slide4_image.jpg);
   background-repeat: no-repeat;
   color: #DA4930;
   font-family: "Days One", sans-serif;
