--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ a {
 
 body {
   text-align: center;
-  background-image: url(http://fifiawards.files.wordpress.com/2012/04/img_6863.jpg);
+  background-image: url(https://s3.amazonaws.com/luuux-original-files/bookmarklet_uploaded/MalibuCollection1-1024x682.jpg);
   background-repeat: no-repeat;
   color: #DA4930;
   font-family: "Days One", sans-serif;
