--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ body {
    included in a directory in our game, but you can also use an image that is
    hosted anyhwere on the internet by using its url in the "url()" rule. */
 .ie {background: url(https://www.pointspot.com/PointSpot/Uploaded/MerchantAds/Bath-&-Body-Image.gif) no-repeat; background-size: contain;}
-.fx {background: url(http://bathandbodyph.com/wp-content/uploads/wpsc/product_images/ccm.jpg) no-repeat; background-size: contain;}
+.fx {background: url(https://www.slbuysmart.com/shopOnline/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/b/a/bath_body_works_signature_collection_1.jpg) no-repeat; background-size: contain;}
 .cr {background: url(http://bbw.imageg.net/graphics/product_images/pBBW1-7247182enh-z8.jpg) no-repeat; background-size: contain;}
 .sf {background: url(http://www.yes24.co.id/Upload/ProductImage/slimnbody/81506_M.jpg) no-repeat; background-size: contain;}
 .op {background: url(http://bbw.imageg.net/graphics/product_images/pBBW1-11699244enh-z8.jpg) no-repeat; background-size: contain;}
