--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ body {
 #game.open #gameIntro {
   opacity: 1;
   z-index: 3;
-  background: url(./images/start.png) center center no-repeat;
+  background: url(http://bbw.imageg.net/graphics/product_images/pBBW1-11688028enh-z8.jpg) center center no-repeat;
 }
 
 #game.play #gameIntro, #game.end #gameIntro {
